modal editar especialidade

--- a/Resomar/WebContent/View/specialty/specialty.html
+++ b/Resomar/WebContent/View/specialty/specialty.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="View/specialty/specialty.css"/>
 
+<title>Especialidade</title>
+
 <div class="specialty-register">
     <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Especialidade
