--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -58,7 +58,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#/especialidade">
+                                    <a href="#/especialista">
                                         <i class="fas fa-user-md"></i>
                                         <span class="item-menu">Especialista</span>
                                     </a>
