--- a/Resomar/WebContent/View/needs/needs.css
+++ b/Resomar/WebContent/View/needs/needs.css
@@ -61,3 +61,72 @@
 a {
     color: inherit;
 }
+
+.table-striped {
+    width: 76%;
+    margin-right: 55px;
+    float: right;
+    margin-top: 20px;
+}
+
+.fa-pencil-alt {
+    font-size: 13px;
+    color: white;
+}
+
+.fa-trash-alt {
+    font-size: 13px;
+    color: white;
+}
+
+.icons {
+    float: right;
+}
+
+.button-edit {
+    background: #85793c;
+}
+
+.button-trash {
+    background: #1E3B2F;
+}
+.invalid {
+    border-color: red;
+}
+
+.fa-window-minimize {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 2px;
+}
+.fa-plus {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 7px;
+}
+
+.fa-window-minimize:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0 auto;
+    margin-top: 2px;
+}
+
+.fa-plus:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0 auto;
+    margin-top: 7px;
+}
+
+a {
+    color: inherit;
+}
