cadastro de especialistas

--- a/Resomar/WebContent/View/specialist/editModal.html
+++ b/Resomar/WebContent/View/specialist/editModal.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/speciality/editModal.css">
 <div class="modal-header">
-    <h4 class="title-header">Editar Especialidade</h4>
+    <h4 class="title-header">Editar Especialista</h4>
 </div>
 <div class="modal-body" id="modal-body">
     <form name="formSpecialityEdit"
@@ -16,6 +16,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn button-cancel" ng-click="specialityCtrl.closeModal();" type="button">Cancelar</button>
-    <button class="btn button-save" ng-click="specialityCtrl.validateSpecialityEdit();" type="button">Salvar</button>
+    <button class="btn button-cancel" ng-click="specialistCtrl.closeModal();" type="button">Cancelar</button>
+    <button class="btn button-save" ng-click="specialistCtrl.validateSpecialistFormEdit();" type="button">Salvar</button>
 </div>
