--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -13,7 +13,7 @@
                         <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#/clinic" title="Cadastrar Clínicas"
+                        <a style="text-decoration:none;" href="#/clinica" title="Cadastrar Clínicas"
                            class="fa fa-plus-circle"></a>
                     </div>
                 </div>
@@ -24,7 +24,7 @@
                         <span>Doações</span><i class="fas fa-donate icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#/donate" title="Cadastrar Doações"
+                        <a style="text-decoration:none;" href="#/doacao" title="Cadastrar Doações"
                            class="fa fa-plus-circle"></a>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                         <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#/specialty" title="Cadastrar Especialidades"
+                        <a style="text-decoration:none;" href="#/especialidade" title="Cadastrar Especialidades"
                            class="fa fa-plus-circle"></a>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                         <span>Instituições</span><i class="fas fa-building icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#/institution" title="Cadastrar Instituições"
+                        <a style="text-decoration:none;" href="#/instituicao" title="Cadastrar Instituições"
                            class="fa fa-plus-circle"></a>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                         <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#/medic" title="Cadastrar Médicos"
+                        <a style="text-decoration:none;" href="#/especialista" title="Cadastrar Médicos"
                            class="fa fa-plus-circle"></a>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#/needs" title="Cadastrar Necessidades"
+                        <a style="text-decoration:none;" href="#/necessidade" title="Cadastrar Necessidades"
                            class="fa fa-plus-circle"></a>
                     </div>
                 </div>
