--- a/Resomar/WebContent/View/specialist/specialist.css
+++ b/Resomar/WebContent/View/specialist/specialist.css
@@ -25,23 +25,14 @@
 }
 
 .btn-cancel {
-    background: #85793C;
-    color: white;
-}
-
-.btn-save {
     background: #1E3B2F;
     color: white;
 }
 
-.btn-cancel:hover {
-    background: #695f2f;
+.btn-save {
+    background: #85793C;
+    color: white;
 }
-
-.btn-save:hover {
-    background: #162b22;
-}
-
 .fa-window-minimize {
     float: right;
     color: #bdbdbd;
@@ -58,7 +49,62 @@
     margin: 0 auto;
     margin-top: 2px;
 }
+.fa-plus {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 17px;
+    margin-top: 5px;
+}
 
+.fa-plus:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 17px;
+    margin-top: 5px;
+}
+.table-striped {
+    width: 76%;
+    margin-right: 55px;
+    float: right;
+    margin-top: 20px;
+}
+
+.fa-pencil-alt {
+    font-size: 13px;
+    color: white;
+}
+
+.fa-trash-alt {
+    font-size: 13px;
+    color: white;
+}
+
+.icons {
+    float: right;
+}
+.button-edit {
+    background: #85793c;
+}
+
+.button-trash {
+    background: #1E3B2F;
+}
+.invalid {
+    border-color: red;
+}
+.buttons {
+    text-align: right;
+}
 a {
     color: inherit;
+}
+.inputs {
+    margin-top: 5px;
+}
+label {
+    font-size: 14px;
+    font-family: inherit;
+    color: #495057;
 }
