--- a/Resomar/WebContent/View/donate/donate.html
+++ b/Resomar/WebContent/View/donate/donate.html
@@ -15,7 +15,7 @@
                     </select>
                 </label>
 
-                <label id="quantidadeConsultas" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                <label ng-show="" id="quantidadeConsultas" class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
                     <input id="quantidadeConsultas" name="quantidadeConsultas" class="form-control"
                            placeholder="Qtd. Consultas">
                 </label>
@@ -68,7 +68,7 @@
         <th scope="col">Código</th>
         <th scope="col">Tipo</th>
         <th scope="col">Clínica</th>
-        <th scope="col">Complexidade</th>
+        <th scope="col">Complexidade (Exames)</th>
         <th></th>
     </tr>
     </thead>
@@ -77,7 +77,7 @@
         <th scope="row">1</th>
         <td>Consulta</td>
         <td>Clínica Volte a Sorrir</td>
-        <td>Alta</td>
+        <td></td>
         <td class="icons">
             <a class="btn btn-sm button-edit " ng-click="specialityCtrl.openModal('lg');" ><i class="fas fa-pencil-alt"></i></a>
             <a class="btn btn-sm button-trash"><i class="fas fa-trash-alt"></i></a>
